--- a/_posts/0000-01-02-ywil0002.md
+++ b/_posts/0000-01-02-ywil0002.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to our ywil0002's slide!"
 ---
 This is ywil0002's slide
 Use the left arrow to go back!
