--- a/_posts/0000-01-02-ywil0002.md
+++ b/_posts/0000-01-02-ywil0002.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to our ywil0002's slide!"
 ---
-This is ywil0002's slide
+This is my awesome slide
 Use the left arrow to go back!
